<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configuracion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.xuan.cacaloc.ConfiguracionActivity">
    <LinearLayout
        android:id="@+id/llSuperiorArriba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:background="@color/BurlyWood">

        <TextView
            android:id="@+id/tvFechaEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkBlue"
            android:gravity="center_horizontal"
            android:text="@string/action_settings"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/SkyBlue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingTop="10dp">
        <TextView
            android:text="@string/pantalla_soloGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGps" />
        <RadioGroup
            android:id="@+id/rbGPXGrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:text="@string/pantalla_si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbSi"
                android:checked="true"/>

            <RadioButton
                android:text="@string/pantalla_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbNo" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRuta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:paddingTop="10dp"
        android:paddingStart="10dp">
        <TextView
            android:text="@string/pantalla_rutas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRuta" />
        <Spinner android:id="@+id/spRutas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llFormatoRuta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingTop="10dp">
        <TextView
            android:text="@string/pantalla_formato_ruta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />
        <RadioGroup
            android:id="@+id/rbGPSGrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:text="@string/pantalla_gpx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbGPX"
                android:checked="true"/>

            <RadioButton
                android:text="@string/pantalla_kml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbKML" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBotonera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp">
        <Button
            android:text="@string/pantalla_guardar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btGuardar" />
        <LinearLayout
            android:id="@+id/llSeparador"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        </LinearLayout>
        <Button
            android:id="@+id/btCancelar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/pantalla_cancelar" />

    </LinearLayout>
</LinearLayout>